name: SnapChat
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: jfeingold@gmail.com
stability: Experimental
synopsis: SnapChat Server
description: Demos Snap, AcidState, IxSet
category: Web
author: J Feingold
data-dir: ""
 
executable snapchatws
    build-depends: base >=4 && <5, bytestring >=0.9.1 && <0.11,
                   MonadCatchIO-transformers >=0.2.1 && <0.4, mtl >=2 && <3,
                   snap-core >=0.9 && <0.11, snap-server >=0.9 && <0.11, aeson >=0.7,
                   containers >=0.5, safecopy >=0.8.2, network >=2.4.1.2,
                   acid-state >=0.12.1, transformers >=0.3.0.0, time >=1.4.0.1,
                   ixset >=1.0.5, vector >=0.10.0.1, text >=0.11.3.1,
                   scientific >=0.2.0.2
     
    if impl(ghc >=6.12.0)
        buildable: True
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-unused-do-bind -fno-warn-orphans
    else
        buildable: True
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
    main-is: SnapChatWS.hs
    buildable: True
    hs-source-dirs: src, ../common/src
    other-modules: 
 